<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/complete_toolbar"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/CompleteOrder"
            android:layout_gravity="center"
            android:textColor="@color/black"
            />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/complete_toolbar"
        android:layout_margin="24dp"
        android:textSize="16sp"
        android:id="@+id/complete_address_text1"
        android:text="@string/address_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/complete_address_text1"
        app:layout_constraintTop_toBottomOf="@id/complete_toolbar"
        android:layout_margin="24dp"
        android:textSize="16sp"
        android:id="@+id/complete_address_text2"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/complete_address_text1"
        app:layout_constraintTop_toBottomOf="@id/complete_address_text1"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:id="@+id/complete_type_text1"
        android:text="@string/type"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/complete_type_text1"
        app:layout_constraintTop_toTopOf="@id/complete_type_text1"
        android:textSize="16sp"
        android:id="@+id/complete_type_text2"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/complete_type_text1"
        app:layout_constraintTop_toBottomOf="@id/complete_type_text1"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:id="@+id/complete_car_text1"
        android:text="@string/car"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/complete_car_text1"
        app:layout_constraintTop_toTopOf="@id/complete_car_text1"
        android:textSize="16sp"
        android:id="@+id/complete_car_text2"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/complete_car_text1"
        app:layout_constraintTop_toBottomOf="@id/complete_car_text1"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:id="@+id/complete_startTime_text1"
        android:text="@string/startTime"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/complete_startTime_text1"
        app:layout_constraintTop_toTopOf="@id/complete_startTime_text1"
        android:textSize="16sp"
        android:id="@+id/complete_startTime_text2"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/complete_startTime_text1"
        app:layout_constraintTop_toBottomOf="@id/complete_startTime_text1"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:id="@+id/complete_endTime_text1"
        android:text="@string/endTime"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/complete_endTime_text1"
        app:layout_constraintTop_toTopOf="@id/complete_endTime_text1"
        android:textSize="16sp"
        android:id="@+id/complete_endTime_text2"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/complete_endTime_text1"
        app:layout_constraintTop_toBottomOf="@id/complete_endTime_text1"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:id="@+id/complete_eleNum_text1"
        android:text="@string/eleNum"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/complete_eleNum_text1"
        app:layout_constraintTop_toTopOf="@id/complete_eleNum_text1"
        android:textSize="16sp"
        android:id="@+id/complete_eleNum_text2"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/complete_eleNum_text1"
        app:layout_constraintTop_toBottomOf="@id/complete_eleNum_text1"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:id="@+id/complete_orderPrice_text1"
        android:text="@string/orderPrice"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/complete_orderPrice_text1"
        app:layout_constraintTop_toTopOf="@id/complete_orderPrice_text1"
        android:textSize="16sp"
        android:id="@+id/complete_orderPrice_text2"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/complete_orderPrice_text1"
        app:layout_constraintTop_toBottomOf="@id/complete_orderPrice_text1"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:id="@+id/complete_subPrice_text1"
        android:text="@string/subPrice"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/complete_subPrice_text1"
        app:layout_constraintTop_toTopOf="@id/complete_subPrice_text1"
        android:textSize="16sp"
        android:id="@+id/complete_subPrice_text2"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/complete_subPrice_text1"
        app:layout_constraintTop_toBottomOf="@id/complete_subPrice_text1"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:id="@+id/complete_finePrice_text1"
        android:text="@string/finePrice"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/complete_finePrice_text1"
        app:layout_constraintTop_toTopOf="@id/complete_finePrice_text1"
        android:textSize="16sp"
        android:id="@+id/complete_finePrice_text2"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/complete_finePrice_text1"
        app:layout_constraintTop_toBottomOf="@id/complete_finePrice_text1"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:id="@+id/complete_payPrice_text1"
        android:text="@string/payPrice"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/complete_payPrice_text1"
        app:layout_constraintTop_toTopOf="@id/complete_payPrice_text1"
        android:textSize="16sp"
        android:id="@+id/complete_payPrice_text2"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/complete_payPrice_text1"
            android:layout_marginTop="48dp"
            android:id="@+id/complete_button"
            android:background="@drawable/commit_background"
            android:text="@string/complete_order"
            />

</androidx.constraintlayout.widget.ConstraintLayout>